# finsaas

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json
scripts/: benchmark.py  seed_db.py
src/finsaas/: __init__.py
src/finsaas/analytics/: equity.py  metrics.py  report.py  trades.py
src/finsaas/api/: facade.py
src/finsaas/cli/: main.py
src/finsaas/cli/commands/: backtest.py  (+3 more)
src/finsaas/core/: config.py  context.py  errors.py  events.py  series.py  types.py
src/finsaas/data/: feed.py  loader.py  models.py  repository.py  sample_data.py
src/finsaas/engine/: broker.py  commission.py  loop.py  order.py  portfolio.py  risk.py  runner.py  slippage.py
src/finsaas/optimization/: genetic.py  grid.py  objective.py  optimizer.py  parallel.py  result.py  space.py
src/finsaas/pine/: ast_nodes.py  grammar.lark  parser.py  pine_builtins.py  runtime.py  semantic.py  transpiler.py
src/finsaas/strategy/: __init__.py  base.py  decorators.py  examples.py  parameters.py  registry.py
src/finsaas/web/: __init__.py  app.py  schemas.py
tests/: conftest.py
tests/core/: test_series.py
tests/engine/: test_broker.py  test_loop.py  test_portfolio.py
tests/fixtures/: sample_ohlcv.csv
tests/fixtures/sample_pine_scripts/: sma_crossover.pine
tests/integration/: test_full_backtest.py  test_pine_backtest.py
tests/optimization/: test_determinism.py  test_genetic.py  test_grid.py
tests/pine/: test_parser.py  test_transpiler.py
tests/strategy/: test_builtins_ta.py  test_dsl.py
(+16 files in other folders)
