[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finsaas"
version = "0.1.0"
description = "Backtest & Parameter Optimization Engine with Pine Script support"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "lark>=1.1,<2.0",
    "deap>=1.4,<2.0",
    "typer[all]>=0.9,<1.0",
    "rich>=13.0,<14.0",
    "structlog>=24.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
finsaas = "finsaas.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/finsaas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
